<resources>
    <string name="app_name">MagicMirror</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting…</string>
    <string name="default_device_list_entry">Connect to new mirror</string>
    <string name="settings_general">General Settings</string>
    <string name="settings_custom">Custom Settings</string>

    <string name="key_pref_mirror_config_address">mirror_address</string>
    <string name="key_pref_mirror_config_port">mirror_port</string>
    <string name="key_pref_mirror_config_kioskmode">mirror_kiosk</string>
    <string name="key_pref_mirror_config_language">mirror_language</string>
    <string name="key_pref_mirror_config_timeFormat">mirror_timeformat</string>
    <string name="key_pref_mirror_config_units">mirror_units</string>

    <string name="key_pref_app_adapter">app_adapter</string>
    <string name="key_pref_paired_devices">pairedDevices</string>
    <string name="key_pref_default_device">defaultDevices</string>
    <string name="scan">Scan</string>
    <string name="magicmirror">MagicMirror</string>
    <string name="magicmirror_settings">MagicMirror Settings</string>
    <string name="modules">Modules</string>
    <string name="install_modules">Install Modules</string>
    <string name="wifi">Wifi</string>
    <string name="app">App</string>
    <string name="app_settings">App Settings</string>
    <string name="connect_to_mirror">Connect to Mirror</string>
    <string name="about">About</string>
    <string name="key">Key</string>
    <string name="icon">Icon</string>
    <string name="title">Title</string>
    <string name="replace_with">Replace with</string>
    <string name="tag">Tag</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="ssid">SSID:</string>
    <string name="passphrase">Passphrase</string>
    <string name="url">URL</string>
    <string name="symbol">Symbol</string>
    <string name="repeating_count_title">Repeating Count Title</string>
    <string name="basic_authentification_user">Basic Authentification User</string>
    <string name="basic_authentification_pass">Basic Authentification Pass</string>
    <string name="compliment">Compliment</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="possible_values">Possible Values:</string>
    <string name="default_value">Default Value:</string>
    <string name="notes">Notes:</string>
    <string name="encoding">Encoding</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="expand_icon">Expand Icon</string>
    <string name="px">px</string>
    <string name="add_icon">Add Icon</string>
    <string name="add_calendar">Add Calendar</string>
    <string name="add_compliment">Add Compliment</string>
    <string name="add_title_replacement">Add Title Replacement</string>
    <string name="add_value">Add Value</string>
    <string name="add_feed">Add Feed</string>
    <string name="add_tag">Add Tag</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_execute_query">Do you really want to execute the query</string>

    <string-array name="magicmirror_adapter_array">
        <item>Bluetooth LE</item>
        <item>Wifi</item>
    </string-array>

    <string-array name="magicmirror_adapter_value_array">
        <item>ble</item>
        <item>remote</item>
    </string-array>

    <string-array name="timeformat_array">
        <item>12</item>
        <item>24</item>
    </string-array>

    <string-array name="units_array">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

    <string-array name="language_value_array">
        <item>da</item>
        <item>de</item>
        <item>en</item>
        <item>es</item>
        <item>fi</item>
        <item>fr</item>
        <item>fy</item>
        <item>gr</item>
        <item>it</item>
        <item>ja</item>
        <item>nb</item>
        <item>nl</item>
        <item>nn</item>
        <item>pl</item>
        <item>pt</item>
        <item>pt_br</item>
        <item>sv</item>
        <item>tr</item>
        <item>zh_cn</item>
        <item>zh_tw</item>
    </string-array>

    <string-array name="language_label_array">
        <item>Danish</item>
        <item>German</item>
        <item>English</item>
        <item>Spanish</item>
        <item>Suomi</item>
        <item>French</item>
        <item>Frysk</item>
        <item>Greek</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Norsk bokmål</item>
        <item>Dutch</item>
        <item>Norsk nynorsk</item>
        <item>Polish</item>
        <item>Português</item>
        <item>Português Brasileiro</item>
        <item>Svenska</item>
        <item>Turkish</item>
        <item>Simplified Chinese</item>
        <item>Traditional Chinese</item>
    </string-array>

</resources>
